<resources>
    <string name="app_name">Cineverse</string>

    <string name="see_all">See all</string>
    <string name="top_rated">Top Rated</string>
    <string name="latest">Latest</string>
    <string name="popular">Popular</string>
    <string name="tv_shows">TV Shows</string>
    <string name="search_hint">Search…</string>
    <string name="movies_chip">Movies</string>
    <string name="tv_shows_chip">TV Shows</string>
    <string name="actors_label">Actors</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="place_of_birth">place of Birth</string>
    <string name="konwn_for">Known For</string>
    <string name="todo">TODO</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="biography">Biography</string>
    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="actors">Actors</string>
    <string name="oops">Oops!</string>
    <string name="description">There is no internet connection\nPlease check it out</string>
    <string name="all_movies_of_actor">All Movies Of Actor</string>
    <!--   Titles -->
    <string name="title_on_air">On The Air</string>
    <string name="title_tv_shows">TV Shows</string>
    <string name="title_mystery">Mystery</string>
    <string name="title_adventure">Adventure</string>
    <string name="title_trending">Trending</string>
    <string name="title_streaming">Now Streaming</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_celebrity">Celebrities</string>
    <string name="title_airing_today">Airing today</string>
    <string name="title_top_rated_tv_show">Top Rated Tv-Show</string>
    <string name="text_movies">%s Movies</string>
    <string name="movies_label">Movies</string>
    <string name="tv_shows_label">TV Shows</string>
    <string name="history_label">History</string>
    <string name="explore_label">Explore</string>
    <string name="trending_today_label">Trending Today</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="myList">My Lists</string>
    <string name="profile">Profile</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="duration">%1$d Minutes</string>
    <string name="reviews">(%1$s reviews)</string>
    <string name="overview">Overview</string>
    <string name="cast">Cast</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="rate_the_movie">Rate The Movie</string>
    <string name="reviews_title">Reviews</string>
    <string name="review">Reviews</string>
    <string name="reviews_comment">Reviews</string>
    <string name="user_name">"@" %1$s</string>
    <string name="back_button">back button</string>
    <string name="view_all_reviews">View all reviews</string>
    <string name="episodes">Episodes</string>
    <string name="seasons">Seasons</string>
    <string name="submit_toast">Submitted, Thank you for your feedback</string>
    <string name="total_episodes">%1$s Episodes</string>
    <string name="m">%1$s m</string>
    <string name="watch_history">History</string>
    <string name="rated_movies">My Ratings</string>
    <string name="sign_out">Sign Out</string>
    <string name="at">\@</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="you_re_about_to_sign_out_of_your_account">You’re about to sign out of your account.</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Sign Out</string>
    <string name="this_list_has_no_movies">This list has no movies</string>
    <string name="zero">\.0</string>
    <string name="my_ratings">My Ratings</string>
    <string name="items">%1$s Items</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create">Create</string>
    <string name="list_name">List Name</string>
    <string name="explore_some_movies_on_home_or_search_and_then_create_your_movie_list">Explore some movies on “Home” or “Search” and then create your movie list.</string>
    <string name="empty_overview_text">This season has no description.</string>
    <string name="one_season">%1$d Season</string>
    <string name="more_than_one_season">%1$d Seasons</string>
    <string name="internet_connection">There is no internet connection.</string>
    <string name="retry">Retry</string>
    <string name="you_must_be_logged_in_to_see_the_profile">You must be logged in to see the profile and use additional features.</string>
    <string name="new_list">New List</string>
    <string name="log_in">Log In</string>
    <string name="you_must_be_logged_in_to_use_list_features">You must be logged in to use lists feature.</string>
    <string name="empty">Empty</string>
    <string name="create_a_new_list">Create a new list</string>
    <string name="save_to">Save to…</string>
    <string name="hours_pattern">%1$s hours</string>
    <string name="minutes_pattern">%1$s minutes</string>
    <string name="hours_minutes_pattern">%1$s h %2$s m</string>
    <string name="you_must_be_logged_in_to_save_a_movie">You must be logged in to save a movie</string>
    <string name="this_list_has_no_lists">No lists found</string>
    <string name="episode_title">%1$d. %2$s</string>
    <string name="season_number">(%1$s Seasons)</string>
    <string name="no_history_yet">No History Yet</string>
    <string name="no_history_description">It’s quiet in here… Start watching and we’ll keep track for you.</string>
    <string name="watch_something">Find Something to Watch</string>
    <string name="no_ratings_yet">No Ratings Yet</string>
    <string name="rate_dec">Rate movies and series you’ve watched to track what you love, and what you don’t.</string>
    <string name="start_rating">Start Rating</string>
    <string name="change_language">Change Language</string>
    <string name="personalize_experience">Personalize Your Experience!</string>
    <string name="collection_item">Collection Item</string>
    <string name="content_preferences">Content Preferences</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="e_g_my_watchlist">e.g. My Watchlist</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="go_to_website">Go to Website</string>
    <string name="get_started">Get Started</string>
    <string name="onboarding_title_1">Welcome to Your Movie Universe</string>
    <string name="onboarding_desc_1">Discover, track, and rate your favorite movies &amp; series.</string>

    <string name="onboarding_title_2">Track Everything</string>
    <string name="onboarding_desc_2">Your Watchlist. Your Ratings. All in One Place.</string>

    <string name="onboarding_title_3">Personalized Recommendations</string>
    <string name="onboarding_desc_3">Answer fun questions to get handpicked recommendations.</string>
    <string name="history">History</string>
    <string name="language">Language</string>
    <string name="login_or_signup">Login or Signup</string>
    <string name="my_collections">My Collections</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="you_gave_it">You gave it</string>

    <string name="my_ratings_">My Ratings</string>
    <string name="start_collecting">Start Collecting</string>
    <string name="no_collection_content_text">Start building your personal library by saving movies or series you want to remember.</string>
    <string name="no_collections_header">No Collections Yet</string>
    <string name="need_login_header">You\'re Almost There!</string>
    <string name="need_login_content">Log in to save movies, create collections, and get personalized recommendations.</string>
    <string name="create_new_collection">Create New Collection</string>
    <string name="collection_name">Collection Name</string>
    <string name="cancel_txt">Cancel</string>
    <string name="create_txt">Create</string>
    <string name="no_connection_header">Oops! No Internet</string>
    <string name="no_connection_content">Looks like you\'re offline. Let\'s reconnect so you don\'t miss out!</string>
    <string name="try_again">Try Again</string>
    <string name="category_tip_txt">Tip: Swipe left to remove movies from your collection.</string>
    <string name="match">Match</string>
    <string name="take_to_website">Take to Website</string>
    <string name="version_1_0_1">Version 1.0.1</string>
    <string name="you_can_always_sign_back">You can always sign back</string>

    <string name="speak_now">Speak now</string>
    <string name="speech_recognition_failed">Speech recognition failed</string>
    <string name="clear_all">Clear All</string>
    <string name="search_suggestions">Search Suggestions</string>
</resources>