<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.karrar.movieapp.ui.myList.MyListsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_corners"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="28dp"
        android:paddingHorizontal="16dp"
        android:paddingBottom="16dp">

        <View
            android:layout_width="48dp"
            android:layout_height="3dp"
            android:background="@drawable/bottom_sheet_indicator"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/header"
            style="@style/Title.SM"
            android:textColor="@color/shade_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_collection"
            android:layout_marginTop="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        
        <ImageView
            android:src="@drawable/x_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="35dp"
            android:onClick="@{()->viewModel.onCancelBtnClicked()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/content"
            style="@style/Body_MD.Regular"
            android:textColor="@color/shade_secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collection_name"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/list_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/Body_MD.Medium"
            android:textColorHint="@color/shade_tertiary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/folder_icon_gray"
                android:drawablePadding="8dp"
                android:background="@drawable/input_field_background"
                android:afterTextChanged="@{(text) -> viewModel.onListNameInputChange(text)}"
                android:inputType="textPersonName"
                android:maxLength="15"
                android:hint="@string/e_g_my_watchlist"
                android:maxLines="1"
                android:paddingBottom="20dp"
                android:textColor="@color/shade_primary"
                android:textCursorDrawable="@drawable/color_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancle_btn"
            style="@style/Body_MD.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/button_secondary"
            android:minHeight="48dp"
            android:paddingVertical="15dp"
            android:text="@string/cancel_txt"
            android:onClick="@{()->viewModel.onCancelBtnClicked()}"
            android:textColor="@color/button_onSecondary"
            app:cornerRadius="@dimen/radius_md"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/create_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_name" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_btn"
            style="@style/Body_MD.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/primary_btn"
            android:enabled="@{!viewModel.createListDialogUIState.mediaListName.empty}"
            android:minHeight="48dp"
            android:onClick="@{()->viewModel.onClickAddList()}"
            android:paddingVertical="15dp"
            android:text="@string/create_txt"
            android:textColor="@color/on_primary_btn"
            app:cornerRadius="@dimen/radius_md"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancle_btn"
            app:layout_constraintTop_toBottomOf="@+id/list_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

