<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.karrar.movieapp.ui.profile.ProfileViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:backgroundTint="@color/background_bottomSheet"
        android:paddingBottom="28dp"
        app:cardCornerRadius="@dimen/radius_xl">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/bottom_sheet_handler"
                android:layout_width="48dp"
                android:layout_height="4dp"
                android:layout_gravity="center"
                android:background="@drawable/bottom_sheet_handle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/shade_quaternary" />

            <ImageView
                android:id="@+id/logout_icon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/red_background"
                android:scaleType="centerInside"
                android:src="@drawable/ic_logout_dialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bottom_sheet_handler"
                app:tint="@color/primary_red" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_confirmation"
                style="@style/Title.SM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/are_you_sure"
                android:textColor="@color/shade_primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logout_icon" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_signback"
                style="@style/Body_SM.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/you_can_always_sign_back"
                android:textColor="@color/shade_secondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_confirmation" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:background="@drawable/btn_rectangle"
                style="@style/Body_MD.Medium"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:layout_marginTop="24dp"
                android:textColor="@color/button_onSecondary"
                app:backgroundTint="@color/button_secondary"
                android:text="@string/cancel"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@id/text_signback"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_logout"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_logout"
                android:background="@drawable/btn_rectangle"
                android:layout_width="0dp"
                style="@style/Body_MD.Medium"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:textColor="@color/button_onPrimary"
                app:backgroundTint="@color/primary_red"
                android:text="@string/logout"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_cancel"
                app:layout_constraintTop_toTopOf="@id/btn_cancel"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
